--- a/app/src/main/res/layout/fragment_similar_recipes.xml
+++ b/app/src/main/res/layout/fragment_similar_recipes.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-    tools:context=".SimilarRecipesFragment" />
+    tools:context=".view.fragment.SimilarRecipesFragment" />
