--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="35dp">
+    android:layout_height="@dimen/ingredient_item_root_height">
     
     <ImageView
-        android:layout_width="60dp"
+        android:id="@+id/ingredient_image"
+        android:layout_width="@dimen/ingredient_item_image_width"
         android:layout_height="match_parent"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/ingredient_item_image_margin_end"
         android:layout_gravity="center"/>
 
     <TextView
+        android:id="@+id/ingredient_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
