Created a remote module and methods in it to get information from the API. Implemented the main screen with a selection of random recipes according to the criteria specified in the profile and a search in the appbar. Navigation is done through the Navigation drawer.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 app:navigationIcon="@drawable/ic_menu">
 
                 <androidx.appcompat.widget.SearchView
-                    android:id="@+id/main_search"
+                    android:id="@+id/main_quick_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
