--- a/app/src/main/res/layout/dialog_meal_types.xml
+++ b/app/src/main/res/layout/dialog_meal_types.xml
@@ -1,97 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_dialog_meal_types"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recycler_meal_types"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingStart="@dimen/dialog_padding_start"
-    android:paddingTop="@dimen/dialog_padding_top"
-    android:paddingEnd="@dimen/dialog_padding_end"
-    android:paddingBottom="@dimen/dialog_padding_bottom">
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_main_course"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_main_course" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_side_dish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_side_dish" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_dessert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_dessert" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_appetizer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_appetizer" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_salad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_salad" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_bread"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_bread" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_breakfast"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_breakfast" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_soup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_soup" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_beverage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_beverage" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_sauce"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_sauce" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_marinade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_marinade" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_fingerfood"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_fingerfood" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_snack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_snack" />
-
-    <CheckBox
-        android:id="@+id/dialog_meal_types_drink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/meal_type_drink" />
-
-
-</LinearLayout>
+    android:layout_height="wrap_content"/>
