--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,6 +9,12 @@
         android:title="@string/menu_title_home" />
 
     <item
+        android:id="@id/advancedSearchFragment"
+        android:checkable="true"
+        android:icon="@drawable/ic_search"
+        android:title="@string/menu_title_search" />
+
+    <item
         android:id="@id/profileFragment"
         android:checkable="true"
         android:icon="@drawable/ic_profile"
@@ -20,12 +26,11 @@
         android:icon="@drawable/ic_settings"
         android:title="@string/menu_title_settings" />
 
-    <group
-        android:id="@id/functional">
+    <group android:id="@id/functional">
         <item
             android:id="@id/logOutMenu"
-            android:icon="@drawable/ic_clear"
             android:checkable="false"
+            android:icon="@drawable/ic_clear"
             android:title="@string/menu_title_log_out" />
     </group>
 
