--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,6 +3,8 @@
     <item name="homeFragment" type="id"/>
     <item name="profileFragment" type="id"/>
     <item name="settingsFragment" type="id"/>
+    <item name="advancedSearchSettingsFragment" type="id"/>
+    <item name="advancedSearchFragment" type="id"/>
     <item name="detailsFragment" type="id"/>
 
 
