Organized data caching in the local database using the room library.

--- a/app/src/main/res/layout/dish_item.xml
+++ b/app/src/main/res/layout/dish_item.xml
@@ -4,7 +4,7 @@
 
     <data>
 
-        <import type="xyz.flussigkatz.spoonzilla.data.entity.Dish" />
+        <import type="xyz.flussigkatz.core_api.entity.Dish" />
 
         <variable
             name="dish"
